[gd_scene load_steps=8 format=3 uid="uid://dcvg41atfkxj0"]

[ext_resource type="Script" path="res://scenes/welcome_screen.gd" id="1_wa6yt"]
[ext_resource type="Texture2D" uid="uid://c45cnwy0nt3pg" path="res://assets/Background/Gray.png" id="2_l7bb0"]
[ext_resource type="FontFile" uid="uid://cn1cirlwklwf8" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="3_6d6e7"]
[ext_resource type="FontFile" uid="uid://dkeojbddoiw3j" path="res://assets/fonts/static/RobotoMono-Regular.ttf" id="4_hnwma"]
[ext_resource type="StyleBox" uid="uid://bwv8yseaxh5pq" path="res://game_items/unclicked_button.tres" id="5_amucx"]
[ext_resource type="StyleBox" uid="uid://de2f7iifx7o8q" path="res://game_items/hover_button.tres" id="6_83kwv"]
[ext_resource type="StyleBox" uid="uid://6yr7eclkjxl2" path="res://game_items/clikced_button.tres" id="7_1idmk"]

[node name="Welcome Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wa6yt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(18, 10)
texture = ExtResource("2_l7bb0")
centered = false

[node name="Label" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 1160.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("3_6d6e7")
theme_override_font_sizes/font_size = 100
text = "Contact"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 214.0
offset_right = -381.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_hnwma")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = ExtResource("5_amucx")
theme_override_styles/hover = ExtResource("6_83kwv")
theme_override_styles/pressed = ExtResource("7_1idmk")
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 168.0
offset_right = 1152.0
offset_bottom = 538.0
theme_override_fonts/normal_font = ExtResource("4_hnwma")
theme_override_font_sizes/normal_font_size = 50
text = "Email: meatshool@proton.me
Fiverr: Muhammad S
Itch: muhdsalm
Github: muhdsalm"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
