[gd_scene load_steps=8 format=3 uid="uid://1mflcf03q5v2"]

[ext_resource type="Script" path="res://scenes/welcome_screen.gd" id="1_0s7y6"]
[ext_resource type="Texture2D" uid="uid://c45cnwy0nt3pg" path="res://assets/Background/Gray.png" id="2_cqrt6"]
[ext_resource type="FontFile" uid="uid://cn1cirlwklwf8" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="3_llwwx"]
[ext_resource type="FontFile" uid="uid://dkeojbddoiw3j" path="res://assets/fonts/static/RobotoMono-Regular.ttf" id="4_t7bib"]
[ext_resource type="StyleBox" uid="uid://bwv8yseaxh5pq" path="res://game_items/unclicked_button.tres" id="5_lcv8g"]
[ext_resource type="StyleBox" uid="uid://de2f7iifx7o8q" path="res://game_items/hover_button.tres" id="6_ikrga"]
[ext_resource type="StyleBox" uid="uid://6yr7eclkjxl2" path="res://game_items/clikced_button.tres" id="7_b0eot"]

[node name="Welcome Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0s7y6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(18, 10)
texture = ExtResource("2_cqrt6")
centered = false

[node name="Label" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 40.0
offset_top = 28.0
offset_right = 1162.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("3_llwwx")
theme_override_font_sizes/font_size = 100
text = "Congratulations"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 40.0
offset_top = 164.0
offset_right = 1162.0
offset_bottom = 267.0
theme_override_fonts/font = ExtResource("3_llwwx")
theme_override_font_sizes/font_size = 60
text = "You finished the game!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -60.0
offset_right = 148.667
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_t7bib")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = ExtResource("5_lcv8g")
theme_override_styles/hover = ExtResource("6_ikrga")
theme_override_styles/pressed = ExtResource("7_b0eot")
text = "Replay"

[node name="Contact" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 63.0
offset_right = 148.667
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_t7bib")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = ExtResource("5_lcv8g")
theme_override_styles/hover = ExtResource("6_ikrga")
theme_override_styles/pressed = ExtResource("7_b0eot")
text = "Contact"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 186.0
offset_right = 148.667
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_t7bib")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = ExtResource("5_lcv8g")
theme_override_styles/hover = ExtResource("6_ikrga")
theme_override_styles/pressed = ExtResource("7_b0eot")
text = "Quit
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Contact" to="." method="_on_contact_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
